# linux-android-hello-cli

./: CMakeLists.txt  android.toolchain.cmake  hello.c  mybuild.sh  readme.txt
